--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mel&Co - Agence de Communication Paris (IDF)</title>
     <meta name="description" content="Agence de communication Mel&Co à Paris/IDF. Stratégie, création, événementiel entreprise et brand content. Boostez votre visibilité." />
     
-    <!-- Tailwind CSS -->
+    <!-- Tailwind CSS (CDN kept for specific configuration usage) -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <style>
@@ -140,18 +140,21 @@
         }
       }
     </script>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
